# AIQuantificationTools

./: .dockerignore  .env.example  .gitattributes  .gitignore  AGENTS.md  CONTEXT.md  Dockerfile.api  README.md  compose.yaml  design-qa.md  package-lock.json  package.json
.github/workflows/: ci.yml
apps/web/: Dockerfile  index.html  nginx.conf  package.json  vite.config.ts
apps/web/src-tauri/: Cargo.toml  tauri.conf.json
apps/web/src-tauri/src/: main.rs
docs/: architecture.md  desktop-build-notes.md  product-plan.md  stage5-shadow-operations.md  stage6-sandbox-operations.md  stage7-production-readonly-operations.md  stage8-production-readonly-continuity-operations.md  stage9-production-order-admission-operations.md
docs/adr/: 0001-stage6-sandbox-only-order-route.md  0002-binance-spot-testnet-via-ccxt.md  0003-stage6-orders-require-authoritative-evidence-chain.md  0004-stage6-one-time-batch-authorization.md  0005-stage6-query-before-idempotent-retry.md  0006-stage6-fail-fast-batch-compensation.md  0007-stage6-account-level-persistent-kill-switch.md  0008-stage6-normalize-before-authorization.md  0009-stage6-minimal-persisted-order-state-machine.md  0010-stage6-event-driven-reconciliation.md  0011-stage6-ci-and-real-testnet-acceptance.md  (+8 more)
tools/: docker_smoke.py  record_desktop_release.py  run_python.mjs  run_quant_api.py  stage1_bootstrap_preflight.py  stage1_daily_use.py  stage1_prepare.py  stage6_sandbox_acceptance.py  stage7_production_readonly_acceptance.py  stage8_production_readonly_continuity_acceptance.py  stage9_production_admission_acceptance.py
(+456 files in other folders)
