[package]
name = "ai-quantification-tools"
version = "0.1.0"
description = "Desktop shell for AIQuantificationTools"
edition = "2021"

[lib]
name = "ai_quantification_tools_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
